Gamla API calls och deras klasser helt borta
Eftersom jag inte använder api/compare nu alls samt ingen JSON / XML import är de borta nu med för enklare översikt. Scrapern behålls tillfälligt men ska ändras till "on-demand" *pågående*. Inväntar API från leverantör med